# globals-in-loop-check

./: .gitignore  .pre-commit-hooks.yaml  README.md  bad_code.py  detect_global_in_loops.py  pyproject.toml  test_detect_global_in_loops.py
.github/workflows/: release.yml
src/globals_in_loop_check/: __init__.py  checker.py  cli.py
tests/: test_checker.py
